# GeneCircuitry

./: .dockerignore  .gitignore  CHANGELOG.md  CHANGELOG_TODELETE.md  Dockerfile  LICENSE  MANIFEST_TODELETE.in  README.md  RESTRUCTURING_PLAN.md  pixi.toml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_backup.txt  run_complete_analysis.py  run_pipe_regev_test.sh  run_pipe_regev_test_TODELETE.sh  setup_TODELETE.py  verify_controller_TODELETE.py
.github/: copilot-instructions.md
.github/workflows/: conda-build.yml  conda-recipe-autobump.yml  docker.yml  pages.yml  pixi-test.yml  publish.yml  python-package.yml
conda-recipe/: meta.yaml  post-link.sh
docs/: CELLORACLE_MODULE_SUMMARY.md  CELLORACLE_PROCESSING.md  CELLORACLE_QUICK_REF.md  COMPLETE_PIPELINE_GUIDE.md  CONFIG.md  Gemfile  PACKAGE_STRUCTURE.md  PIPELINE_CONTROLLER_GUIDE.md  PREPROCESSING_CONFIG_UPDATE.md  QC_FUNCTIONS.md  _config.yml  api.md  architecture.md  atac-peaks.md  celloracle.md  checkpoints.md  configuration.md  contributing.md  dev.md  getting-started.md  hotspot.md  index.md  installation.md  pipeline.md  plotting.md  preprocessing.md  quickstart.md  reference.md  reporting.md  stratification.md  user-guide.md
docs/dev/: CONTROLLER_IMPLEMENTATION.md  LOGGING_SYSTEM.md  PARALLEL_PROCESSING_FIX.md
examples/: celloracle_workflow.py  complete_pipeline.py  config_example.py  controller_usage_examples.py  example_qc_TODELETE.py  hotspot_workflow.py  preprocess_workflow.py  quick_demo_TODELETE.py  test_config_integration_TODELETE.py
genecircuitry/: __init__.py  atac_peaks_processing.py  celloracle_processing.py  config.py  enrichment_analysis.py  grn_deep_analysis.py  hotspot_processing.py  logging_utils.py  preprocessing.py
genecircuitry/pipeline/: __init__.py  controller.py
genecircuitry/plotting/: __init__.py  grn_plots.py  hotspot_plots.py  qc_plots.py  utils.py
genecircuitry/reporting/: __init__.py  generator.py  sections.py
tests/: __init__.py  test_celloracle.py  test_config.py  test_preprocessing.py
trnspot/: __init__.py  atac_peaks_processing.py  celloracle_processing.py  config.py  grn_deep_analysis.py  hotspot_processing.py  logging_utils.py  preprocessing.py
trnspot.egg-info_TODELETE/: PKG-INFO
trnspot/pipeline/: __init__.py  controller.py
trnspot/plotting/: __init__.py  grn_plots.py  hotspot_plots.py  utils.py
trnspot/reporting/: __init__.py  generator.py  sections.py
