[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "trnspot"
version = "0.1.0"
description = "A package for transcriptional regulatory network analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Samuele Cancellieri", email = "samuelc@uio.no"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scanpy>=1.9.0",
    "anndata>=0.8.0",
    "matplotlib>=3.6.3",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "adjustText>=0.7.3",
    "networkx>=2.6.0",
]

[project.optional-dependencies]
grn = [
    "celloracle",
]
hotspot = [
    "hotspotsc",
]
enrichment = [
    "gseapy>=1.0.0",
]
atac = [
    "genomepy",
    "gimmemotifs",
]
plotting = [
    "marsilea",
]
all = [
    "trnspot[grn,hotspot,enrichment,atac,plotting]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
